--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@microsoft/signalr": "^10.0.0",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
